--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
     "@angular/forms": "~12.0.1",
+    "@angular/localize": "~12.0.1",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@popperjs/core": "^2.9.2",
     "angular-notifier": "^9.0.1",
     "angular2-multiselect-dropdown": "^5.0.4",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
